--- a/src/main/resources/static/back/manager/add_flo_types.html
+++ b/src/main/resources/static/back/manager/add_flo_types.html
@@ -6,8 +6,12 @@
 </head>
 <body>
  <div style="margin-bottom: 20px">
-	<input class="easyui-textbox" id="series" style="width: 80%"
-	data-options="label:'鲜花系列名:',required:true,validType:'account'">
+	<input class="easyui-textbox" id="types" style="width: 80%"
+	data-options="label:'鲜花类别名:',required:true,validType:'account'">
+</div>
+ <div style="margin-bottom: 20px">
+	<input class="easyui-textbox" id="description" style="width: 80%"
+	data-options="label:'鲜花类别描述:',required:true,validType:'account'">
 </div>
 <div>
 	<tr>
