--- a/src/main/resources/static/back/manager/admin.html
+++ b/src/main/resources/static/back/manager/admin.html
@@ -12,26 +12,22 @@
 <body>
 <div class="easyui-panel" title="<center>个人信息修改</center>"
 		style="padding:3% 20%; text-align: center; width: 100%;height:100%; ">
-		<form action="" id="addAdmForm" data-options="novalidate:true" onSubmit="return false">
+		<form action="" id="changeAdmForm" data-options="novalidate:true" onSubmit="return false">
 			<div style="margin-bottom: 20px">
-				<input class="easyui-textbox" id="account" style="width: 40%"
-					data-options="label:'账号：',required:true,iconCls:'icon-man',validType:'account'">
+				<input class="easyui-textbox" id="aid" style="width: 40%"  readonly="readonly" 
+					data-options="label:'编号：',iconCls:'icon-man'">
+			</div>
+			<div style="margin-bottom: 20px">
+				<input class="easyui-textbox" id="account" style="width: 40%"  readonly="readonly" 
+					data-options="label:'账号：',iconCls:'icon-man'">
 			</div>
 			<div style="margin-bottom: 20px">
 				<input class="easyui-textbox" id="aname" style="width: 40%"
 					data-options="label:'姓名：',required:true,iconCls:'icon-man',validType:'name'">
 			</div>
 			<div style="margin-bottom: 20px">
-				<input class="easyui-textbox" id="tel" style="width: 40%"
+				<input class="easyui-textbox" id="tel" style="width: 40%" 
 					data-options="label:'电话：',required:true,iconCls:'icon-tel',validType:'phone'">
-			</div>
-			<div style="margin-bottom: 20px">
-				<input class="easyui-textbox" type="password" id="pwd" style="width: 40%"
-					data-options="label:'密码：',required:true,iconCls:'icon-lock',validType:'password'">
-			</div>
-			<div style="margin-bottom: 20px">
-				<input class="easyui-textbox"   type="password" id="ck" style="width: 40%"
-					data-options="label:'确认密码：',required:true,iconCls:'icon-lock',validType:'password'">
 			</div>
 			<div style="margin-bottom: 20px">
 				<span style="float: center;">头像：</span> <input type="file" id="pic"
@@ -39,7 +35,9 @@
 					onchange="setImagePreviews(this,'showPics')">
 			</div>
 			<div style="margin-bottom: 20px; height: 80px; text-align: center;"
-				id="showPics"></div>
+				id="showPics">
+				<img :src="headImg">
+				</div>
 			<div>
 				<input class="easyui-radiobutton" name="level" checked="checked"
 					value="0" label="普通管理员"> <input class="easyui-radiobutton"
@@ -53,7 +51,7 @@
 </div>
 <script type="text/javascript">
 let login = new Vue({
-	el: "#admin_info",
+	el: "#changeAdmForm",
 	data: {
 		aid:"",
 		account:"",
@@ -67,110 +65,85 @@ let login = new Vue({
 		axios.get("../adm/findCurrent").then(result=> {
 			if(result.data.success){ //已登录
 				this.aid = result.data.data.aid;
+				 $("#aid").textbox("setValue",this.aid);
 				this.aname = result.data.data.aname;
-				this.account = result.data.data.account;		   
-				this.aid = result.data.data.aid;
+				 $("#aname").textbox("setValue",this.aname);
+				this.account = result.data.data.account;		
+				 $("#account").textbox("setValue",this.account);
 			    this.role = result.data.data.role;
 			    this.headImg = result.data.data.headImg;
 			    this.tel = result.data.data.tel;
-			}  else{
+				 $("#tel").textbox("setValue",this.tel);
+     		}  else{
 				alert("请登陆后重试。。。")
 			}
 		})
 	}
 })
 
-function checkUsername(){
-	var username; 
-	username= $.trim($("#aname").val());
-	if(username == ""){
-		document.getElementById("username").style="color:red";
-		document.getElementById("username").textContent="请输入管理员名字";
-	}else{
-	    document.getElementById("username").textContent="";
-	    return true;
+$.extend($.fn.validatebox.defaults.rules, {
+	phone : { //验证手机号  
+		validator : function(value, param) {
+			return /^1[3-8]+\d{9}$/.test(value);
+		},
+		message : '请输入正确的手机号码'
+	},
+	name : {// 验证姓名，可以是中文或英文
+		validator : function(value) {
+			return /^[\u4e00-\u9fa5]+$/i.test(value)
+					| /^[A-Za-z]+$/i.test(value);
+		},
+		message : '请输入姓名(中文或者英文名)'
+	},
+	account : {// 验证用户名
+		validator : function(value) {
+			return /^[a-zA-Z][a-zA-Z0-9_]{5,15}$/i.test(value);
+		},
+		message : '用户名不合法（字母开头，允许6-16字节，允许字母数字下划线）'
+	},
+	password : {// 验证密码
+		validator : function(value) {
+			return /^[a-zA-Z0-9_]{5,15}$/i.test(value);
+		},
+		message : '密码不合法（允许6-16字节，允许字母数字下划线）'
 	}
-}
+});
 
-function checkPwd(){
-	var pwd; 
-    let regPassword = new RegExp("^[0-9A-Za-z0-9_]{5,16}$");
- 	pwd=document.getElementById("pwd").value;
-	if(regPassword.test(pwd)){
-		document.getElementById("password").textContent="";
-	    return true;
-	}else{
-		document.getElementById("password").style="color:red";
-		document.getElementById("password").textContent="密码必须由6-16位数字、字母、下划线组成";
-	}
-
-}
-
-function cPwd(){
-	var pwd; 
- 	pwd=document.getElementById("pwd").value;
-	var cpwd;
-	cpwd=document.getElementById("ck").value;
-	if(cpwd==pwd || pwd== ""){
-		document.getElementById("ckpw").textContent="";
-	    return true;
-	}else{
-		document.getElementById("ckpw").style="color:red";
-		document.getElementById("ckpw").textContent="请输入相同的密码";
-	}
-
-}
-
-function checkTel(){
-	var Tel= document.getElementById("tel").value;
-	let regPhone = /^1[3456789]\d{9}$/; //移动电话
-    let regTelPhone = new RegExp("^((0\d{2,4})-)(\d{7,8})(-(\d{3,}))?$"); 
-	if(regPhone.test(Tel) || regTelPhone.test(Tel)){
-	    document.getElementById("telephone").textContent="";
-	    return true;
-	}else{
-		document.getElementById("telephone").style="color:red";
-		document.getElementById("telephone").textContent="请输入正确的手机号码或电话号码";
-	}
-}
-
-function change(){	
-	checkTel()
-	cPwd();
-	checkPwd();
-	checkUsername();
-	if(checkTel()!=true || checkUsername()!=true || checkPwd()!=true || cPwd()!=true ){
+function submitForm() {
+	var validate = $("#changeAdmForm").form('enableValidation').form('validate');
+	if (!validate){
 		return;
 	}
-	
 	var aid = $.trim($("#aid").val());
-	var account = $.trim($("#account").val());
 	var aname = $.trim($("#aname").val());
-	var pwd = $.trim($("#pwd").val());
 	var tel = $.trim($("#tel").val());
-	pwd = hex_md5(pwd);
+	var account = $.trim($("#account").val());
+	var role = 1;
 
-	
 	$.ajaxFileUpload({
-		url:"/zyl/adm/update",
-	    secureuri:false,
-	    fileElementId:"pic",
-	    dataType:"json",
-	    data:{aid:aid,aname:aname,pwd:pwd,tel:tel},
-	    success:function(data){
-	       if(data.success){
-	    		$("#changeForm")[0].reset();
-	    		$("#showPics").html("");
-	    		alert("管理员信息添加成功...");
-	    	}else{
-	    		alert("管理员信息添加失败，请稍后重试...");
-	    	}
-	    },
-	    error:function(data,status,e){
-	    	alert("管理员信息添加失败...\n"+e);
-	    }
+		url : "/zyl/adm/update",
+		secureuri : false,
+		fileElementId : "pic",
+		dataType : "json",
+		data : {
+			aname : aname,
+			tel : tel,
+			aid: aid,
+			account: account,
+			role: role
+		},
+		success : function(data) {
+			if (data.success) {
+				alert("管理员信息修改成功...");
+			} else {
+				alert("管理员信息修改失败，请稍后重试...");
+			}
+		},
+		error : function(data, status, e) {
+			alert("管理员信息修改失败...\n" + e);
+		}
 	});
-	
+
 }
 </script>
 </body>
