后台 修改密码 个人管理

--- a/src/main/resources/static/back/manager/add_admin.html
+++ b/src/main/resources/static/back/manager/add_admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>源辰-添加管理员</title>
+<title>ZYL花城-添加管理员</title>
 <link rel="shortcut icon" href="back/images/copylogo.png"
 	type="image/x-icon" />
 <link rel="stylesheet" href="back/css/common.css">
