--- a/src/main/resources/static/back/manager/view_series.html
+++ b/src/main/resources/static/back/manager/view_series.html
@@ -39,7 +39,7 @@ var types_obj = $('#series_data').datagrid({
 			iconCls: 'icon-add',
 			handler: function(){
 				$("#view_goods_dialog").dialog({
-					title:"添加商品信息",
+					title:"添加鲜花系列",
 					width:600,
 				    height:400,
 				    closed:false,
@@ -126,14 +126,15 @@ var types_obj = $('#series_data').datagrid({
 					success:function(data){
 						if(data.success){
 							$.messager.show({title:'成功提示',msg: '鲜花种类信息修改成功...', timeout:2000, showType:'slide'});
+							$('#series_data').datagrid('loadData');
 						}else{
 							$.messager.show('失败提示',  '鲜花种类信息修改失败...', 'error');
+							$('#series_data').datagrid('reload');
 						}
 					}
 				});
 				row = null;
 				types_editRow = undefined;
-				$('#series_data').datagrid('reload');
 			}
 		},'-',{
 			text:"删除",
