--- a/src/main/resources/static/back/manager/supermanager.html
+++ b/src/main/resources/static/back/manager/supermanager.html
@@ -30,9 +30,7 @@
         	<h1>EasyUI Web Admin</h1>
         </div>
         <div class="wu-header-right" id="login_info" >
-            <img :src="headImg" id="back_headImg"></img>
-        	<p><strong class="easyui-tooltip" title="2条未读消息">超级管理员</strong>，{{aname}}欢迎您！</p>
-            <p><a href="#">网站首页</a>|<a href="#">支持论坛</a>|<a href="#">帮助中心</a>|<a href="#">安全退出</a></p>
+        	<p> <img :src="headImg" id="back_headImg"></img><strong class="easyui-tooltip" title="2条未读消息">超级管理员</strong>，{{aname}}欢迎您！</p>
         </div>
     </div>
     <!-- end of header -->
@@ -66,6 +64,7 @@
             <div title="个人中心" data-options="iconCls:'icon-user'" style="padding:5px;">  	
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/admin.html" iframe="0">个人管理</a></li>
+                    <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/change_pwd.html" iframe="0">修改密码</a></li>
                 </ul>
             </div> 
         </div>
