--- a/src/main/resources/static/back/manager/view_flo_details.html
+++ b/src/main/resources/static/back/manager/view_flo_details.html
@@ -17,8 +17,8 @@
 				<b class="pl15">修改鲜花信息</b>
 			</div>
 			<div class="box_center">
-				<form action="" class="jqtransform" id="addNewsForm">
-					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">
+				<form action="" class="jqtransform" id="floDetailsForm">
+					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">			
 						<tr>
 							<td class="td_right">鲜花类型：</td>
 							<td>
@@ -40,7 +40,7 @@
 							</td>
 							<td class="td_right">价格：</td>
 							<td>
-								<input type="text" id="price" name="price" class="input-text lh30" size="40" value="99">
+								<input type="text" id="price" name="price" class="input-text lh30" size="40">
 							</td>					
 						</tr>
 						<tr>
@@ -48,39 +48,48 @@
 							<td>
 								<input type="text" id="sale" name="sale" class="input-text lh30" size="40" >
 							</td>					
-							<td class="td_right">配送说明：</td>
+			            	<td class="td_right">包装：</td>
 							<td>
-								<input type="text" id="deliveryDesc" name="deliveryDesc" class="input-text lh30" size="40" value="顺丰配送">
-							</td>							
-						</tr>
-						<tr>
-						  <td class="td_right">图片：</td>
-							<td>
-								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')" accept="image/gif, image/jpeg, image/jpg, image/png">
-							</td>	
-							<td class="td_right">花语：</td>
-							<td>
-								<input type="text" id="flowerLan" name="flowerLan" class="input-text lh30" size="40" >
+								<input type="text" id="pack" name="pack" class="input-text lh30" size="80" >
 							</td>						
 						</tr>
 						<tr>
-							<td>&nbsp;</td>
-							<td colspan="3" align="center">
+						<td class="td_right">配送说明：</td>
+							<td>
+								<input type="text" id="deliveryDesc" name="deliveryDesc" class="input-text lh30" size="40" value="顺丰配送">
+							</td>	
+	
+							<td class="td_right">花语：</td>
+							<td>
+								<input type="text" id="flowerLan" name="flowerLan" class="input-text lh30" size="80" >
+							</td>						
+						</tr>
+						<tr>
+							<td class="td_right">简述：</td>
+							<td>
+								<input type="text" id="intro" name="intro" class="input-text lh30" size="40" >
+							</td>							
+						</tr>	
+						<tr>
+							<td class="td_right">图片：</td>
+							<td width="200px">
+								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setFloImagePreviews(this,'showPics')" accept="image/gif, image/jpeg, image/jpg, image/png">
+							</td>
+							<td colspan="3" align="left">
 								<div id="showPics">
-								
 								</div>
 							</td>
 						</tr>
 						<tr>
 							<td class="td_right">具体描述：</td>
 							<td colspan="3">
-								<textarea name="editor1" id="editor1" rows="10" cols="80"></textarea>
+								<textarea name="editor2" id="editor2" rows="10" cols="80"></textarea>
 							</td>
 						</tr>
 						<tr>
 							<td colspan="4" align="center">
-								<input type="button" name="button" class="btn btn82 btn_save2" onclick="addFloInfo()" value="添加">
-								<input type="reset" name="button" class="btn btn82 btn_res" value="重置">
+							    	<button class="easyui-linkbutton" data-options="iconCls:'icon-edit'"
+				                	onclick="modifyFloInfo()" style="width: 130px">修改</button>
 							</td>
 						</tr>
 					</table>
@@ -90,7 +99,8 @@
 	</div>
 </div>
 <script type="text/javascript">	
-CKEDITOR.replace( 'editor1' );
+CKEDITOR.replace( 'editor2' );
+
 
 $(function(){
 	$.post("/zyl/flowerType/findAll",data => {
@@ -110,25 +120,25 @@ $(function(){
 	},"json")
 })
 
-
-
-function addFloInfo(){	
+function modifyFloInfo(){	
 	var tid = $.trim($("#floType").val());
 	var sid = $.trim($("#floSeries").val());
 	var fname = $.trim($("#fname").val());
 	var price = $.trim($("#price").val());
 	var sale = $.trim($("#sale").val());
+	var pack = $.trim($("#pack").val());
 	var deliveryDesc = $.trim($("#deliveryDesc").val());
 	var flowerLan = $.trim($("#flowerLan").val());
+	var intro = $.trim($("#intro").val());
 	var description = CKEDITOR.instances.editor1.getData();//获取ckeditor下面的内容，设置setData("");	
 	
-	if(fname == "" || price == "" || sale == "" || deliveryDesc == "" || flowerLan == "" || description == ""){
-		alert("请完善信息后添加!!!!");
+	if(fname == "" || price == "" || sale == "" || deliveryDesc == "" || flowerLan == "" || description == ""  || pack==""  || intro == ""){
+		alert("请完善信息后修改!!!!");
 		return;
 	}
 
 	$.ajaxFileUpload({
-		url:"/zyl/flower/insert",
+		url:"/zyl/flower/update",
 	    secureuri:false,
 	    fileElementId:"pics",
 	    dataType:"json",
@@ -137,14 +147,14 @@ function addFloInfo(){
             if(data.success){
 	    		$("#addNewsForm")[0].reset();
 	    		$("#showPics").html("");
-	    		CKEDITOR.instances.editor1.setData("");
-	    		alert("鲜花信息添加成功...");
+	    		CKEDITOR.instances.editor2.setData("");
+	    		alert("鲜花信息修改成功...");
 	    	}else{
-	    		alert("鲜花信息添加失败，请稍后重试...");
+	    		alert("鲜花信息修改失败，请稍后重试...");
 	    	}
 	    },
 	    error:function(data,status,e){
-	    	alert("鲜花信息添加失败...\n"+e);
+	    	alert("鲜花信息修改失败...\n"+e);
 	    }
 	});
 }
