后台库存修改

--- a/src/main/resources/static/back/manager/supermanager.html
+++ b/src/main/resources/static/back/manager/supermanager.html
@@ -30,7 +30,7 @@
         	<h1>EasyUI Web Admin</h1>
         </div>
         <div class="wu-header-right" id="login_info" >
-        	<p> <img :src="headImg" id="back_headImg"></img><strong class="easyui-tooltip" title="2条未读消息">超级管理员</strong>，{{aname}}欢迎您！</p>
+        	<p> <img :src="headImg" id="back_headImg"></img><strong class="easyui-tooltip" title="2条未读消息" id="myrole">超级管理员</strong>，{{aname}}欢迎您！</p>
         </div>
     </div>
     <!-- end of header -->
