--- a/src/main/resources/static/back/manager/admin.html
+++ b/src/main/resources/static/back/manager/admin.html
@@ -30,6 +30,10 @@
 					data-options="label:'电话：',required:true,iconCls:'icon-tel',validType:'phone'">
 			</div>
 			<div style="margin-bottom: 20px">
+				<input class="easyui-textbox" id="role" style="width: 40%"  readonly="readonly" 
+					data-options="label:'管理员等级：',iconCls:'icon-man'">
+			</div>
+			<div style="margin-bottom: 20px">
 				<span style="float: center;">头像：</span> <input type="file" id="pic"
 					name="pic" style="width: 70% margin-left:"
 					onchange="setAdmImagePreviews(this,'showPics')">
@@ -54,7 +58,8 @@ let login = new Vue({
 		status: 0,
 		level:"",
 		headImg:"",
-		tel:""
+		tel:"",
+		role:""
 	},
 	mounted:function(){
 		axios.get("../adm/findCurrent").then(result=> {
@@ -69,7 +74,12 @@ let login = new Vue({
 			    this.headImg = result.data.data.headImg;
 			    this.tel = result.data.data.tel;
 				 $("#tel").textbox("setValue",this.tel);
-     		}  else{
+				 if(this.role == 1){
+					 $("#role").textbox("setValue", "超级管理员");
+				 }else{
+					 $("#role").textbox("setValue", "普通管理员");					 
+				 }
+     		}  else {
 				alert("请登陆后重试。。。")
 			}
 		})
@@ -113,8 +123,14 @@ function submitForm() {
 	var aname = $.trim($("#aname").val());
 	var tel = $.trim($("#tel").val());
 	var account = $.trim($("#account").val());
-	var role = 1;
+	var role = $.trim($("#role").val());
 
+	if(role == "超级管理员"){
+		role=1;
+	}else{
+		role =0;
+	}
+	
 	$.ajaxFileUpload({
 		url : "/zyl/adm/update",
 		secureuri : false,
@@ -125,7 +141,7 @@ function submitForm() {
 			tel : tel,
 			aid: aid,
 			account: account,
-			role: role
+			role:role
 		},
 		success : function(data) {
 			if (data.success) {
@@ -139,7 +155,6 @@ function submitForm() {
 			alert("管理员信息修改失败...\n" + e);
 		}
 	});
-
 }
 </script>
 </body>
