--- a/src/main/resources/static/back/manager/normalmanager.html
+++ b/src/main/resources/static/back/manager/normalmanager.html
@@ -3,18 +3,25 @@
 <head>
 <meta charset="utf-8" />
 <title>后台管理</title>
-<link rel="stylesheet" type="text/css" href="../../css/easyui.css" />
-<link rel="stylesheet" type="text/css" href="../../css/wu.css" />
-<link rel="stylesheet" type="text/css" href="../../css/icon.css" />
-<script type="text/javascript" src="../../js/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="../../js/jquery.easyui.min.js"></script>
-<script type="text/javascript" src="../../js/easyui-lang-zh_CN.js"></script>
-<script type="text/javascript" src="../../js/showpic.js"></script>
-<script type="text/javascript" src="../../js/ajaxfileupload.js"></script>
-<script type="text/javascript" src="../../js/axios.js"></script>
-<script type="text/javascript" src="../../js/vue.js"></script>
-<script type="text/javascript" src="../../js/echarts.min.js"></script>
-<script src="../../ckeditor/ckeditor.js"></script>
+<link rel="stylesheet" type="text/css" href="/zyl/back/css/wu.css" />
+<style type="text/css">
+#back_headImg{
+ max-height: 30px;
+ max-width: 30px;
+}
+</style>
+<link rel="stylesheet" type="text/css" href="/zyl/back/easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="/zyl/back/easyui/themes/icon.css">
+<script type="text/javascript" src="/zyl/back/easyui/jquery.min.js"></script>
+<script type="text/javascript" src="/zyl/back/easyui/jquery.easyui.min.js"></script>
+<script type="text/javascript" src="/zyl/back/js/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="/zyl/back/js/showpic.js"></script>
+<script type="text/javascript" src="/zyl/back/js/ajaxfileupload.js"></script>
+<script type="text/javascript" src="/zyl/back/js/axios.js"></script>
+<script type="text/javascript" src="/zyl/back/js/vue.js"></script>
+<script type="text/javascript" src="/zyl/back/js/echarts.min.js"></script>
+<script type="text/javascript" src="/zyl/back/js/md5.js"></script>
+<script src="/zyl/back/ckeditor/ckeditor.js"></script>
 </head>
 <body class="easyui-layout">
 	<!-- begin of header -->
@@ -23,8 +30,7 @@
         	<h1>EasyUI Web Admin</h1>
         </div>
         <div class="wu-header-right" id="login_info" >
-        	<p><strong class="easyui-tooltip" title="2条未读消息"></strong>，欢迎您！</p>
-            <p><a href="#">网站首页</a>|<a href="#">支持论坛</a>|<a href="#">帮助中心</a>|<a href="#">安全退出</a></p>
+        	<p> <img :src="headImg" id="back_headImg"></img><strong class="easyui-tooltip" title="2条未读消息" id="myrole">管理员</strong>，{{aname}}欢迎您！</p>
         </div>
     </div>
     <!-- end of header -->
@@ -34,9 +40,10 @@
         	<div title="鲜花信息管理" data-options="iconCls:'icon-report-picture'" style="padding:5px;">  	
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-report"><a href="javascript:void(0)" data-icon="icon-report" data-link="manager/view_types.html" iframe="0">鲜花类型</a></li>
-                    <li iconCls="icon-report"><a href="javascript:void(0)" data-icon="icon-report" data-link="manager/series.html" iframe="0">鲜花系列</a></li>
+                    <li iconCls="icon-report"><a href="javascript:void(0)" data-icon="icon-report" data-link="manager/view_series.html" iframe="0">鲜花系列</a></li>
                     <li iconCls="icon-report-add"><a href="javascript:void(0)" data-icon="icon-report-add" data-link="manager/add_flo.html" iframe="0">添加鲜花</a></li>
                     <li iconCls="icon-report-edit"><a href="javascript:void(0)" data-icon="icon-report-edit" data-link="manager/view_flo.html" iframe="0">鲜花维护</a></li>
+                    <li iconCls="icon-report-edit"><a href="javascript:void(0)" data-icon="icon-report-edit" data-link="manager/view_store.html" iframe="0">库存</a></li>
                 </ul>
             </div>
             <div title="销售信息管理" data-options="iconCls:'icon-report-picture'" style="padding:5px;">  	
@@ -48,12 +55,13 @@
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/view_user.html" iframe="0">用户管理</a></li>
                 </ul>
-            </div>   
+            </div>           
             <div title="个人中心" data-options="iconCls:'icon-user'" style="padding:5px;">  	
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/admin.html" iframe="0">个人管理</a></li>
+                    <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/change_pwd.html" iframe="0">修改密码</a></li>
                 </ul>
-            </div>         
+            </div> 
         </div>
     </div>	
     <!-- end of sidebar -->    
@@ -81,27 +89,21 @@
 				addTab(title,url,iconCls,iframe);
 			});	
 		});
-		/*
+		
 		let login = new Vue({
 			el: "#login_info",
 			data: {
 				aname: "",
 				status: 0,
-				level:""
+				level:"",
+				headImg:""
 			},
 			mounted:function(){
-				axios.get("../../admin", {params:{op:"info"}}).then(result=> {
-					if(result.data.code == 200){ //已登录
-						this.aname=  result.data.data.aname;
-					    this.status = result.data.data.status;
-					    if(this.status == 1){
-					    	this.level = "普通管理员";
-					    }else if(this.status ==2){
-					    	this.level = "高级管理员";
-					    }else if(this.status == 3){
-					    	this.level = "店家";
-					    }
-					
+				axios.get("../adm/findCurrent").then(result=> {
+					if(result.data.success){ //已登录
+						this.aname =  result.data.data.aname;
+					    this.role = result.data.data.role;
+					    this.headImg = result.data.data.headImg;
 					}  else{
 						this.aname = "wu";
 					}
@@ -109,9 +111,6 @@
 			}
 		})
 
-		*/
-		
-		
 		function info(){
 			return axios.get("../../admin", {params:{op:"info"}})
 		}
