--- a/src/main/resources/static/back/manager/add_flo.html
+++ b/src/main/resources/static/back/manager/add_flo.html
@@ -17,8 +17,8 @@
 				<b class="pl15">添加鲜花信息</b>
 			</div>
 			<div class="box_center">
-				<form action="" class="jqtransform" id="addNewsForm">
-					<table class="form_table pt15 pb15" width="100%" border="0" cellpadding="0" cellspacing="0">
+				<form action="" class="jqtransform" id="addFloForm">
+					<table class="form_table pt15 pb15" width="95%" border="0" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="td_right">鲜花类型：</td>
 							<td>
@@ -32,6 +32,10 @@
 								
 								</select>
 							</td>
+							<td class="td_right">折扣：</td>
+							<td>
+								<input type="text" id="sale" name="sale" class="input-text lh30" size="20" >
+							</td>
 						</tr>
 						<tr>
 							<td class="td_right">鲜花名称：</td>
@@ -40,38 +44,36 @@
 							</td>
 							<td class="td_right">价格：</td>
 							<td>
-								<input type="text" id="price" name="price" class="input-text lh30" size="40" value="99">
+								<input type="text" id="price" name="price" class="input-text lh30" size="20" value="99">
 							</td>					
-						</tr>
-						<tr>
-							<td class="td_right">折扣：</td>
+							<td class="td_right">库存：</td>
 							<td>
-								<input type="text" id="sale" name="sale" class="input-text lh30" size="40" >
-							</td>					
-							<td class="td_right">配送说明：</td>
+								<input type="text" id="store" name="store" class="input-text lh30" size="20" value="20">
+							</td>
+	                    </tr>
+						<tr>											
+							<td class="td_right">简述：</td>
 							<td>
-								<input type="text" id="deliveryDesc" name="deliveryDesc" class="input-text lh30" size="40" value="顺丰配送">
-							</td>							
-						</tr>
-						<tr>
-			            	<td class="td_right">包装：</td>
-							<td>
-								<input type="text" id="pack" name="pack" class="input-text lh30" size="40" >
-							</td>	
+								<input type="text" id="intro" name="intro" class="input-text lh30" size="40" >
+							</td>
 							<td class="td_right">花语：</td>
 							<td>
 								<input type="text" id="flowerLan" name="flowerLan" class="input-text lh30" size="40" >
 							</td>						
+							<td class="td_right">配送说明：</td>
+							<td>
+								<input type="text" id="deliveryDesc" name="deliveryDesc" class="input-text lh30" size="20" value="顺丰配送">
+							</td>
 						</tr>
 						<tr>
 						  <td class="td_right">图片：</td>
 							<td>
 								<input type="file" id="pics" name="pics" class="input-text lh30" size="40" multiple="multiple" onchange="setImagePreviews(this,'showPics')" accept="image/gif, image/jpeg, image/jpg, image/png">
 							</td>
-							<td class="td_right">简述：</td>
+			            	<td class="td_right">包装：</td>
 							<td>
-								<input type="text" id="intro" name="intro" class="input-text lh30" size="40" >
-							</td>							
+								<input type="text" id="pack" name="pack" class="input-text lh30" size="40" >
+							</td>															
 						</tr>	
 							<tr>
 							<td>&nbsp;</td>
@@ -131,9 +133,10 @@ function addFloInfo(){
 	var deliveryDesc = $.trim($("#deliveryDesc").val());
 	var flowerLan = $.trim($("#flowerLan").val());
 	var intro = $.trim($("#intro").val());
+	var store = $.trim($("#store").val());
 	var description = CKEDITOR.instances.editor1.getData();//获取ckeditor下面的内容，设置setData("");	
 	
-	if(fname == "" || price == "" || sale == "" || deliveryDesc == "" || flowerLan == "" || description == "" || pack==""  || intro == ""){
+	if(fname == "" || price == "" || sale == "" || deliveryDesc == "" || flowerLan == "" || description == "" || pack==""  || intro == "" || store == ""){
 		alert("请完善信息后添加!!!!");
 		return;
 	}
@@ -143,10 +146,10 @@ function addFloInfo(){
 	    secureuri:false,
 	    fileElementId:"pics",
 	    dataType:"json",
-	    data:{tid:tid, sid:sid, fname:fname, price:price, sale:sale, deliveryDesc:deliveryDesc, flowerLan:flowerLan,pack:pack,intro:intro, description:description},
+	    data:{tid:tid, sid:sid, fname:fname, price:price, sale:sale, deliveryDesc:deliveryDesc, flowerLan:flowerLan,pack:pack,store:store,intro:intro, description:description},
 	    success:function(data,status){
             if(data.success){
-	    		$("#addNewsForm")[0].reset();
+	    		$("#addFloForm")[0].reset();
 	    		$("#showPics").html("");
 	    		CKEDITOR.instances.editor1.setData("");
 	    		alert("鲜花信息添加成功...");
